--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,17 @@
         <li><%= link_to "トップへ", root_path %></li>
         <% if logged_in? %>
           <li><%= link_to "ユーザー一覧", users_path %></li>
-          <li><%= link_to "基本情報の修正", users_path %></li>
+          <% if current_user.admin? && !current_user?(1) %>
+          <li><%= link_to "基本情報の修正", edit_basic_info_user_path(current_user) %></li>
+          <% end %>
+ 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              メニュー <b class="caret"></b>
+              <%= current_user.name %><b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "勤怠", current_user %></li>
-              <li><%= link_to "設定", edit_user_path(current_user) %></li>
+              <li><%= link_to "勤怠情報", current_user %></li>
+              <li><%= link_to "アカウント情報変更", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "ログアウト", logout_path, method: :delete %>
