--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,11 @@
 <div>
   <table class="table table-bordered table-condensed user-table">
     <tr>
-      <td>【<%= l(@first_day, format: :middle) %>】勤怠管理表</td>
+      <td>
+      <%= link_to "⇦", user_path(date: @first_day.prev_month),class: "btn btn-info" %>
+      <%= l(@first_day, format: :middle) %>勤怠管理表
+      <%= link_to "⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
+      </td>
       <td>指定勤務時間：<%= format_basic_info(@user.work_time) %></td>
       <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
       <td>月初日：<%= l(@first_day, format: :short) %></td>
@@ -15,11 +19,6 @@
       <td>月末日：<%= l(@last_day, format: :short) %></td>
     </tr>
   </table>
-</div>
-
-<div class="btn-users-show">
-  <%= link_to "⇦ 前月へ", user_path(date: @first_day.prev_month), class: "btn btn-info" %>
-  <%= link_to "次月へ ⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
 </div>
 
 <div>
