--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,8 +6,8 @@
         <li><%= link_to "トップへ", root_path %></li>
         <% if logged_in? %>
           <li><%= link_to "ユーザー一覧", users_path %></li>
-          <% if current_user.admin? && !current_user?(1) %>
-          <li><%= link_to "基本情報の修正", edit_basic_info_user_path(current_user) %></li>
+          <% if current_user.admin? %>
+          <li><%= link_to "基本情報の修正",users__edit_all_basic_info_path %></li>
           <% end %>
  
           <li class="dropdown">
