--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,27 +2,28 @@
 <div>
   <table class="table table-bordered table-condensed user-table">
     <tr>
-      <td>
+      <td colspan = 2>
         <%= link_to "⇦", user_path(date: @first_day.prev_month),class: "btn btn-info" %>
         <%= l(@first_day, format: :middle) %>勤怠管理表
         <%= link_to "⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
       </td>
       <td>指定勤務時間：<%= format_basic_info(@user.work_time) %></td>
       <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
-      <td>月初日：<%= l(@first_day, format: :short) %></td>
+      <td>初日：<%= l(@first_day, format: :short) %></td>
     </tr>
 
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
       <td>名前：<%= @user.name %></td>
+      <td>コード：<%= %></td>
       <td>出勤日数：<%= @worked_sum %>日</td>
-      <td>月末日：<%= l(@last_day, format: :short) %></td>
+      <td>締日：<%= l(@last_day, format: :short) %></td>
     </tr>
   </table>
 </div>
 
 <div class="btn-users-show">
-  <%= link_to "1ヶ月の勤怠編集へ", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
+  <%= link_to "勤怠を編集", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
 </div>
 
 
@@ -30,36 +31,46 @@
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
     <thead>
       <tr>
-        <th>日付</th>
-        <th>曜日</th>
-        <th>勤怠登録</th>
-        <th>出勤時間</th>
-        <th>退勤時間</th>
+        <th rowspan = 2>日付</th>
+        <th rowspan = 2>曜日</th>
+        <th colspan = 2>出社</th>
+        <th></th>
+        <th colspan = 2>退出</th>
+        <th colspan = 2></th>
+      </tr>
+      <tr>
+        <th>時</th>
+        <th>分</th>
+        <th></th>
+        <th>時</th>
+        <th>分</th>
         <th>在社時間</th>
-        <th>備考</th>
+        <th>　備　考　</th>
       </tr>
     </thead>
 
     <tbody>
-<% @attendances.each do |day| %>
-  <tr>
-    <td><%= l(day.worked_on, format: :short) %></td>
-    <td><%= $days_of_the_week[day.worked_on.wday] %></td>
-    <td>
-      <% if btn_text = attendance_state(day) %>
-        <%= link_to "#{btn_text}登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
-      <% end %>
-    </td>
-    <td><%= l(day.started_at, format: :time) if day.started_at.present? %></td>
-    <td><%= l(day.finished_at, format: :time) if day.finished_at.present? %></td>
-    <td>
-      <% if day.started_at.present? && day.finished_at.present? %>
-        <%= working_times(day.started_at, day.finished_at) %>
-      <% end %>
-    </td>
-    <td></td>
-  </tr>
-<% end %>
+     <% @attendances.each do |day| %>
+      <tr>
+          <td><%= l(day.worked_on, format: :short) %></td>
+          <td><%= $days_of_the_week[day.worked_on.wday] %></td>
+          <td><%= l(day.started_at, format: :timeH) if day.started_at.present? %></td>
+          <td><%= l(day.started_at, format: :timeM) if day.started_at.present? %></td>
+          <td>
+            <% if btn_text = attendance_state(day) %>
+              <%= link_to "#{btn_text}", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
+            <% end %>
+          </td>
+          <td><%= l(day.finished_at, format: :timeH) if day.finished_at.present? %></td>
+          <td><%= l(day.finished_at, format: :timeM) if day.finished_at.present? %></td>
+          <td>
+            <% if day.started_at.present? && day.finished_at.present? %>
+              <%= working_times(day.started_at, day.finished_at) %>
+            <% end %>
+          </td>
+          <td></td>
+        </tr>
+     <% end %>
     </tbody>
     <tfoot>
       <tr>
@@ -67,11 +78,13 @@
         <td colspan="2">総合勤務時間</td>
         <td colspan="2">累計在社時間</td>
         <td rowspan="2"></td>
+        <td rowspan="2"></td>
+        <td rowspan="2"></td>
       </tr>
       <tr>
         <td colspan="2"><%= @attendances.count %></td>
         <td colspan="2"><%= format_basic_info(@user.work_time).to_f * @worked_sum %></td>
-        <td colspan="2"></td>
+        <td colspan="2"><%= format_basic_info(@user.basic_time).to_f * @worked_sum %></td>
       </tr>
     </tfoot>
   </table>
