--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,14 @@
      <% @attendances.each do |day| %>
       <tr>
           <td><%= l(day.worked_on, format: :short) %></td>
-          <td><%= $days_of_the_week[day.worked_on.wday] %></td>
+            <% css_class = 
+            case $days_of_the_week[day.worked_on.wday]
+            when "土"
+            'text-primary'
+            when "日" 
+            'text-danger'
+            end %>
+          <td class="<%= css_class %>" id="wday"><%= $days_of_the_week[day.worked_on.wday] %></td>
           <td><%= l(day.started_at, format: :timeH) if day.started_at.present? %></td>
           <td><%= l(day.started_at, format: :timeM) if day.started_at.present? %></td>
           <td>
