検索機能終了

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,16 @@
 <% provide(:title, 'Users') %>
 <h1>ユーザー一覧</h1>
 
+<div class="col-md-3 col-md-offset-9">
+  <p>ユーザー名検索</p>
+  <%= form_with url: users_path, method: :get, local: true do |f| %>
+    <%= f.text_field :name %>
+   <button class="btn btn-primary btn-sm"><% f.submit :Search %>検索</button>
+   <% end %>
+</div>
+
 <div class="col-md-10 col-md-offset-1">
-  <%= will_paginate %>
+  <%= will_paginate(@p_users) %>
   <table class="table table-condensed table-hover" id="table-users">
     <thead>
       <tr>
@@ -40,7 +48,7 @@
       </tr>
     <% end %>
   </table>
-  <%= will_paginate %>
+  <%= will_paginate(@p_users) %>
 </div>
 
 <!--モーダルウインドウ表示-->
