--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <div class="col-md-10 col-md-offset-1">
-  <%= will_paginate(@p_users) %>
+  <%= will_paginate(@users) %>
   <table class="table table-condensed table-hover" id="table-users">
     <thead>
       <tr>
@@ -48,7 +48,7 @@
       </tr>
     <% end %>
   </table>
-  <%= will_paginate(@p_users) %>
+  <%= will_paginate(@users) %>
 </div>
 
 <!--モーダルウインドウ表示-->
