--- a/app/views/users/edit_all_basic_info.html.erb
+++ b/app/views/users/edit_all_basic_info.html.erb
@@ -9,7 +9,7 @@
   <div class="body">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <%= form_with(model: @user,url: update_basic_info_user_path(@user), local: true) do |f| %>
+        <%= form_with(model: @user,url: update_basic_info_user_path, local: true) do |f| %>
           <%= render 'shared/error_messages', object: @user %>
           <%= f.label :basic_time, class: "label-#{yield(:class_text)}" %>
           <%= f.time_field :basic_time, class: "form-control" %>
